# gopro-merge

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md
src/: concat.rs  encoding.rs  group.rs  grouper.rs  identifier.rs  main.rs  merge.rs  movie.rs  processor.rs  progress.rs  recording.rs
src/merge/: command.rs  ffmpeg_merger.rs  merge.rs  merger.rs  mod.rs  stream.rs
src/merge/ffmpeg/: command.rs  merger.rs  mod.rs  parser.rs
src/process/: concat.rs  mod.rs  processor.rs
