[package]
name = "gopro-join"
version = "0.1.0"
authors = ["ggeorgiev_ <ggeorgiev@gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
anyhow = "1.0.31"
thiserror = "1.0.20"
rayon = "1.3.1"