[package]
name = "gopro-join"
version = "0.1.0"
authors = ["ggeorgiev_ <ggeorgiev@gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
anyhow = "1.0.31"
thiserror = "1.0.20"
rayon = "1.3.1"
log = "0.4.11"
env_logger = "0.7.1"
lazy_static = "1.4.0"
defmac = "0.2.1"
color-backtrace = "0.4"
indicatif = "0.15.0"