[package]
name = "gopro-join"
version = "0.1.0"
authors = ["ggeorgiev_ <ggeorgiev@gitlab.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
thiserror = "1.0.29"
rayon = "1.5.1"
log = "0.4.14"
env_logger = "0.9.0"
lazy_static = "1.4.0"
defmac = "0.2.1"
color-backtrace = "0.5.1"
indicatif = "0.16.2"
console = "0.14.1"
derive_more = "0.99.0"
parking_lot = "0.11.2"
serde = "1.0.130"
serde_json = "1.0"
crossbeam-channel = "0.5"